--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "montu_challenge",
   "version": "0.0.1",
   "description": "platform/devx code test",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
+    "build": "rollup -c",
+    "dev": "concurrently \"tsc --watch\" \"nodemon ./dist/index.js\"",
     "test": "jest --setupFiles dotenv/config"
   },
   "repository": {
@@ -11,5 +13,14 @@
     "url": "github.com/niallyoung/montu_challenge"
   },
   "author": "Niall Young <5465765+niallyoung@users.noreply.github.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@jest/globals": "^29.7.0",
+    "concurrently": "^9.0.1",
+    "dotenv": "^16.4.5",
+    "jest": "^29.7.0",
+    "rollup": "^4.24.3",
+    "rollup-plugin-typescript2": "^0.36.0",
+    "typescript": "^5.6.3"
+  }
 }
