--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "concurrently \"tsc --watch\" \"nodemon ./dist/index.js\"",
-    "test": "jest --setupFiles dotenv/config"
+    "test": "jest --setupFiles dotenv/config",
+    "lint:check": "eslint --debug --max-warnings=0",
+    "ts:check": "tsc --noEmit"
   },
   "repository": {
     "type": "git",
@@ -18,6 +20,7 @@
     "@jest/globals": "^29.7.0",
     "concurrently": "^9.0.1",
     "dotenv": "^16.4.5",
+    "eslint": "^9.13.0",
     "jest": "^29.7.0",
     "rollup": "^4.24.3",
     "rollup-plugin-typescript2": "^0.36.0",
