ts-jest, tidy up initial funcs, exercise `make all` until clean exit (lint/tests/jest/tsconfig)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     "allowJs": false,
     "declaration": true,
     "moduleResolution": "node",
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "esModuleInterop": true,
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist", "rollup.config.js"]
