--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jest": "^29.7.0",
     "rollup": "^4.24.3",
     "rollup-plugin-typescript2": "^0.36.0",
+    "ts-jest": "^29.2.5",
     "typescript": "^5.6.3"
   }
 }
