--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "MIT",
   "dependencies": {
     "@jest/globals": "^29.7.0",
+    "axios": "^1.7.7",
     "concurrently": "^9.0.1",
     "dotenv": "^16.4.5",
     "eslint": "^9.13.0",
