--- a/.github/workflows/branches.yaml
+++ b/.github/workflows/branches.yaml
@@ -46,4 +46,6 @@ jobs:
           path: node_modules
           key: ${{ github.sha }}
       - name: Unit tests
+        env:
+          TOMTOM_API_KEY: ${{ secrets.TOMTOM_API_KEY }}
         run: make test
